--- a/css/style.css
+++ b/css/style.css
@@ -127,3 +127,28 @@ img {
 /************************************************
     SOLUZIONE RESPONSIVE
  ************************************************/
+@media screen and (max-width: 768px) {
+    .container{
+        width: 100%;
+    }
+}
+@media screen and (max-width: 480px) {
+    .row{
+        flex-direction: column;
+        align-items: center;
+        }
+    .lessons .col,
+    .steps .col{
+        width: 100%;
+        margin-top: 2rem;
+        margin-bottom: 1rem;
+    }
+    .why-us .col-left,
+    .why-us .col-right{
+        width: 100%;
+        margin-top: 3rem;
+    }
+    h2{
+        margin-bottom: 1.5rem;
+    }
+}
